# MyModbus

./: CMakeLists.txt  ini.txt  main.cpp  main.h  settxt.cpp  settxt.h
